<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Aktuelles Budget TextView -->
    <TextView
        android:id="@+id/textViewCurrentBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/aktueller_betrag"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Letzte Änderungen TextView -->
    <TextView
        android:id="@+id/textViewLastChangesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/letzte_aenderungen"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCurrentBudget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ListView für die Auflistung der letzten Änderungen -->
    <ListView
        android:id="@+id/listViewLastChanges"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:cacheColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLastChangesLabel" />

    <!-- Navigationsleiste -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navigation_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_home_24"
            android:gravity="center"
            android:text="@string/title_home"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/navigation_budgetplan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_add_24"
            android:gravity="center"
            android:text="@string/title_budget"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/navigation_analysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_analytics_24"
            android:gravity="center"
            android:text="@string/title_analysis"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/navigation_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_question_mark_24"
            android:gravity="center"
            android:text="@string/title_help"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
