<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">

    <!-- Aktuelles Budget TextView -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="576dp"
        android:text="@string/title_help"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navigation_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_home_24"
            android:gravity="center"
            android:text="@string/title_home"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/navigation_budgetplan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_add_24"
            android:gravity="center"
            android:text="@string/title_budget"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/navigation_analysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_analytics_24"
            android:gravity="center"
            android:text="@string/title_analysis"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/navigation_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_question_mark_24"
            android:gravity="center"
            android:text="@string/title_help"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
