<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Budgetplan">

    <!-- Aktuelles Budget TextView -->
    <TextView
        android:id="@+id/textViewCurrentBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Aktuelles Budget"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextBudgetLimit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Budgetlimit eingeben"
        app:layout_constraintTop_toBottomOf="@id/textViewCurrentBudget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextAusgabenEssen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Ausgaben für Essen"
        app:layout_constraintTop_toBottomOf="@id/editTextBudgetLimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextAusgabenHaushalt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Ausgaben für Haushalt"
        app:layout_constraintTop_toBottomOf="@id/editTextAusgabenEssen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextAusgabenFreizeit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Ausgaben für Freizeit"
        app:layout_constraintTop_toBottomOf="@id/editTextAusgabenHaushalt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextAusgabenSonstiges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Ausgaben für Sonstiges"
        app:layout_constraintTop_toBottomOf="@id/editTextAusgabenFreizeit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/saveBudgetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Budget speichern"
        app:layout_constraintTop_toBottomOf="@id/editTextAusgabenSonstiges"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/navigation_home"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:icon="@drawable/baseline_home_24"
            android:text="@string/title_home" />

        <Button
            android:id="@+id/navigation_budgetplan"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:icon="@drawable/baseline_add_24"
            android:text="@string/title_budget" />

        <Button
            android:id="@+id/navigation_analysis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:icon="@drawable/baseline_analytics_24"
            android:text="@string/title_analysis" />

        <Button
            android:id="@+id/navigation_help"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:icon="@drawable/baseline_question_mark_24"
            android:text="@string/title_help" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
